feat: integración usuarios-organización y cambios generales
